feat: добавлена возможность рассылок
Рассылка есть удалённый запуск Entry для заданного списка ID пользователей.
