# internal/app/dto/request/mailing_command.go
@@ -1,0 +1,7 @@
+package request
+
+type MailingCommand struct {
+	BotID    string
+	EntryKey string
+	Users    []int64
+}
